fixed overflow text in message bubbles when long links are present

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,39 +6,45 @@
 	.flex-col {
 		display: flex;
 		flex-direction: column;
-	  }
-	  .flex-center {
+	}
+
+	.flex-center {
 		@apply flex;
 		@apply justify-center;
 		@apply items-center;
-	  }
-	  .absolute-full {
+	}
+
+	.absolute-full {
 		@apply absolute;
 		@apply top-0;
 		@apply left-0;
 		@apply right-0;
 		@apply bottom-0;
-	  }
-	
-	  .text-shadow-accent {
+	}
+
+	.text-shadow-accent {
 		text-shadow: 1px 1px theme('colors.main');
-	  }
-	  .text-shadow-tpWhite {
+	}
+
+	.text-shadow-tpWhite {
 		text-shadow: 1px 1px theme('colors.tpWhite');
-	  }
-	  .text-shadow-tpBlack {
+	}
+
+	.text-shadow-tpBlack {
 		text-shadow: 1px 1px theme('colors.tpBlack');
-	  }
-	  .text-shadow-6 {
-		text-shadow: 
-		  1px 1px 1px #18082e, 2px 2px 1px #18082e, 3px 3px 1px #18082e, 
-		  4px 4px 1px #18082e, 5px 5px 1px #18082e, 6px 6px 1px #18082e;
-	  }
-	  .text-shadow-duo {
+	}
+
+	.text-shadow-6 {
+		text-shadow:
+			1px 1px 1px #18082e, 2px 2px 1px #18082e, 3px 3px 1px #18082e,
+			4px 4px 1px #18082e, 5px 5px 1px #18082e, 6px 6px 1px #18082e;
+	}
+
+	.text-shadow-duo {
 		text-shadow: -1px -1px theme('colors.tpBlack'), 1px 1px theme('colors.tpWhite');
-	  }
-	
-	  /* .glass {
+	}
+
+	/* .glass {
 		backdrop-filter: blur(18px);
 		-webkit-backdrop-filter: blur(18px);
 		@apply bg-accentWhite bg-opacity-40;
@@ -49,13 +55,18 @@
 		-webkit-backdrop-filter: blur(12px);
 		@apply bg-accentBlack bg-opacity-80;
 	  } */
-	
-	  .shadow-asBorder {
+
+	.shadow-asBorder {
 		box-shadow: 0 0 0 1px theme('colors.tpBlack');
-	  }
-	
-	  .border-sexy {
+	}
+
+	.border-sexy {
 		box-shadow: 0 0 0 1px theme('colors.tpBlack');
 		@apply border border-tpWhite;
-	  }
+	}
+
+	.break-word {
+		word-break: break-word;
+		word-wrap: break-word;
+	}
 }
